--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="cube">
                   <div class="side">
-                    <div class="cube-image"><img src='images/kwall.png' style="height: 22vh"></div>
+                    <div class="cube-image active"><a href='bio.html'><img src='images/kwall.png' style='height: 18vh;' class='cubeImg'><p class='subtext'>Bio</p></a></div>
                   </div>
                   <div class="side">
                     <div class="cube-image"><a href='contact.html'><img src='images/smartphone.png' class='cubeImg' style="padding-right: 1.4rem;"><p class='subtext padd'>Contact Me</p></a></div>
@@ -44,7 +44,7 @@
                     <div class="cube-image"><p class='newText'>Ken Wall</p></div>
                   </div>
                   <div class="side">
-                    <div class="cube-image"><a href='recent.html'><img src='images/recentW.svg' style='margin-top: 3.5em;' class='cubeImg'><p class='subtext padd'>Recent Work</p></a></div>
+                    <div class="cube-image"><a href='recent.html'><img src='images/recentW.svg' class='cubeImg'><p class='subtext'>Recent Work</p></a></div>
                   </div>
                   <div class="side">
                     <div class="cube-image active"><a href='writings.html'><img src='images/typewriter.png' class='cubeImg'><p class='subtext padd'>Writings</p></a></div>
@@ -69,8 +69,8 @@
             <!--<div class="nextdiv"><a href='#'>
               <img class='next' src="images/next.svg"></a>-->
           </section>
-
-          <video playsinline autoplay muted loop id="bgvid">
+          <!-- playsinline autoplay muted loop -->
+          <video autoplay muted loop id="bgvid">
             <source src="images/video.mp4" type="video/mp4">
           </video>
 
