media queries for skills section looking better

--- a/skills.html
+++ b/skills.html
@@ -30,23 +30,44 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<section class="flex">
+		<h1 class="smallT">Front End Skills</h1>
 		<div class='flexchild'>
 			<h1 class='feskills'>Front<br>End<br>Skills</h1>
 					<img src="images/settings.svg" class='watermark-skill'>
 		</div>
 
+
+
 		<div class="flexchild addMargin">
 			<div class="scene">
 		  	<div class="carousel">
-			    <div class="carousel__cell"><img src="images/html-5.png" style='height: 1.2em';></div>
-			    <div class="carousel__cell"><img src="images/css-3.png" style='height: 1.2em';></div>
-			    <div class="carousel__cell"><img src="images/js.png" style='height: 1.2em';></div>
-			    <div class="carousel__cell"><img src="images/rails.png" style='width: 2em';></div>
-			    <div class="carousel__cell"><img src="images/vue.png" style='height: 1.2em';></div>
-			    <div class="carousel__cell"><img src="images/node-js.png" style='height: 1.5em';></div>
-			    <div class="carousel__cell"><img src="images/git(1).png" style='height: 1.5em';></div>
-			    <div class="carousel__cell"><img src="images/bootstrap.png" style='height: 1.8em';></div>
-			    <div class="carousel__cell"><img src="images/ruby.png" style='height: 1.5em';></div>
+			    <div class="carousel__cell"><img src="images/html-5.png" style='height: 1.2em';>
+						<p class='description'>html 5, written semantically and accessibly</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/css-3.png" style='height: 1.2em';>
+						<p class='description'>css3, with an emphasis on responsive design</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/js.png" style='height: 1.2em';>
+						<p class='description'>over 2 years of JS experience, including es6</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/rails.png" style='width: 2em';>
+						<p class='description'>competency in full-stack development with the popular Ruby framework</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/vue.png" style='height: 1.2em';>
+						<p class='description'>current area of focus</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/node-js.png" style='height: 1.5em';>
+						<p class='description'>experience setting up servers with node.js</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/git(1).png" style='height: 1.5em';>
+						<p class='description'>I use git and github every day</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/bootstrap.png" style='height: 1.8em';>
+						<p class='description'>over 2 years expererience with bootstrap</p>
+					</div>
+			    <div class="carousel__cell"><img src="images/ruby.png" style='height: 1.5em';>
+						<p class='description'>strong grasp of programming basics rooted in ruby</p>
+					</div>
 		  </div>
 		</div>
 
