abandoned skills carousel MQ exectuion

--- a/skills.html
+++ b/skills.html
@@ -48,7 +48,7 @@
 						<p class='description'>css3, with an emphasis on responsive design</p>
 					</div>
 			    <div class="carousel__cell"><img src="images/js.png" style='height: 1.2em';>
-						<p class='description'>over 2 years of JS experience, including es6</p>
+						<p class='description'>over 2 years of JS experience with es6 syntax</p>
 					</div>
 			    <div class="carousel__cell"><img src="images/rails.png" style='width: 2em';>
 						<p class='description'>competency in full-stack development with the popular Ruby framework</p>
@@ -76,6 +76,7 @@
 		    <label>
 		      Cells
 		      <input class="cells-range" type="range" min="3" max="15" value="9" />
+					<!-- max = 3 for small screens -->
 		    </label>
 		  </p>
 		  <p>
@@ -85,7 +86,7 @@
 	  	<p class='hide'>
 		    Orientation:
 		    <label>
-		      <input type="radio" name="orientation" value="horizontal" checked />
+		      <input type="radio" name="orientation" value="horizontal" checked/>
 		      horizontal
 		    </label>
 		    <label>
