small screens looking better

--- a/skills.html
+++ b/skills.html
@@ -36,7 +36,38 @@
 					<img src="images/settings.svg" class='watermark-skill'>
 		</div>
 
+		<div class="smallDisplay">
 
+			<div class="smallImg"><img src="images/html-5.png" style='height: 1.2em';>
+				<p class='smalldescription'>html 5, written semantically and accessibly</p>
+			</div>
+			<div class="smallImg"><img src="images/css-3.png" style='height: 1.2em';>
+				<p class='smalldescription'>css3, with an emphasis on responsive design</p>
+			</div>
+			<div class="smallImg"><img src="images/js.png" style='height: 1.2em';>
+				<p class='smalldescription'>over 2 years of JS experience with es6 syntax</p>
+			</div>
+			<div class="smallImg"><img src="images/rails.png" style='width: 2em';>
+				<p class='smalldescription'>competency in full-stack development with the popular Ruby framework</p>
+			</div>
+			<div class="smallImg"><img src="images/vue.png" style='height: 1.2em';>
+				<p class='smalldescription'>current area of focus</p>
+			</div>
+			<div class="smallImg"><img src="images/node-js.png" style='height: 1.5em';>
+				<p class='smalldescription'>experience setting up servers with node.js</p>
+			</div>
+			<div class="smallImg"><img src="images/git(1).png" style='height: 1.5em';>
+				<p class='smalldescription'>I use git and github every day</p>
+			</div>
+			<div class="smallImg"><img src="images/bootstrap.png" style='height: 1.8em';>
+				<p class='smalldescription'>over 2 years expererience with bootstrap</p>
+			</div>
+			<div class="smallImg"><img src="images/ruby.png" style='height: 1.5em';>
+				<p class='smalldescription'>strong grasp of programming basics rooted in ruby</p>
+			</div>
+	</div>
+
+		</div>
 
 		<div class="flexchild addMargin">
 			<div class="scene">
