--- a/recent.html
+++ b/recent.html
@@ -21,6 +21,7 @@
 		<div class="close">
 			<img src="images/delete.svg">
 		</div>
+		<li><a href='bio.html'>Bio</a></li>
 		<li><a href='skills.html'>Skills</a></li>
 		<li><a href='contact.html'>Contact</a></li>
 		<li><a href='resources.html'>Resources</a></li>
@@ -31,6 +32,7 @@
 		<a href="index.html">Home</a>
 		<a href="skills.html">Skills/Services</a>
 		<a href="recent.html" class='activeNav'>Recent Work</a>
+		<a href="bio.html">Bio</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<section class="flex">
