--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
 		<div class="close">
 			<img src="images/delete.svg">
 		</div>
+		<li><a href='bio.html'>Bio</a></li>
 		<li><a href='skills.html'>Skills</a></li>
 		<li><a href='contact.html'>Contact</a></li>
 		<li><a href='resources.html'>Resources</a></li>
@@ -25,6 +26,7 @@
 		<a href="index.html">Home</a>
 		<a href="skills.html">Skills/Services</a>
 		<a href="recent.html">Recent Work</a>
+		<a href="bio.html">Bio</a>
 		<a href="contact.html" class='active'>Contact</a>
 	</nav>
 	<section class="flex">
