--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="close">
                   <img src="images/delete.svg">
                 </div>
+                <li><a href='bio.html'>Bio</a></li>
                 <li><a href='skills.html'>Skills</a></li>
                 <li><a href='contact.html'>Contact</a></li>
                 <li><a href='resources.html'>Resources</a></li>
@@ -60,11 +61,11 @@
 
             <nav class="classicNav">
               <img src="images/delete.svg" id='closeNav'>
+              <li><a href='bio.html'>Bio</a></li>
               <li><a href='skills.html'>Skills</a></li>
               <li><a href='contact.html'>Contact</a></li>
               <li><a href='resources.html'>Resources</a></li>
               <li><a href='recent.html'>Recent Work</a></li>
-              <!-- <li><a href='contact.html'>Resources</a></li> -->
             </nav>
             <!--<div class="nextdiv"><a href='#'>
               <img class='next' src="images/next.svg"></a>-->
