--- a/skills.html
+++ b/skills.html
@@ -17,6 +17,7 @@
 		<div class="close">
 			<img src="images/delete.svg">
 		</div>
+		<li><a href='bio.html'>Bio</a></li>
 		<li><a href='skills.html'>Skills</a></li>
 		<li><a href='contact.html'>Contact</a></li>
 		<li><a href='resources.html'>Resources</a></li>
@@ -27,6 +28,7 @@
 		<a href="index.html">Home</a>
 		<a href="skills.html" class='active'>Skills/Services</a>
 		<a href="recent.html">Recent Work</a>
+		<a href="bio.html">Bio</a>
 		<a href="contact.html">Contact</a>
 	</nav>
 	<section class="flex">
